--- a/css/styles.css
+++ b/css/styles.css
@@ -5,17 +5,24 @@
   color: #2c4058;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  width: 1600px;
+}
+
 .screen {
   display: flex;
   flex-direction: column;
 }
 .screen .landing-screen {
-  height: 100vh;
-  background-image: url(" /img/screen1_mask_group.png"), url("/img/screen1_background.png");
-  background-repeat: no-repeat;
-  background-size: auto;
   display: flex;
   flex-direction: column;
+  height: 800px;
+  background-image: url(" /img/screen1_mask_group.png"), linear-gradient(243.43deg, #7e5aff 16.9%, #55b7ff 83.27%);
+  background-size: cover;
   align-items: center;
   justify-content: space-around;
 }
@@ -89,10 +96,21 @@
 }
 .screen .landing-screen__card {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 917px;
+  text-align: center;
+  width: 1000px;
   height: 420px;
+}
+.screen .landing-screen__card--down-arrow {
+  display: flex;
+  flex-direction: row;
+  align-content: stretch;
+  align-items: flex-end;
+  justify-content: space-around;
+  position: relative;
+  right: 506px;
+}
+.screen .landing-screen__card--down-arrow:hover {
+  bottom: -10px;
 }
 .screen .landing-screen__card--title {
   font-family: "Montserrat", sans-serif;
@@ -171,14 +189,14 @@
   width: 585px;
   height: 470px;
   left: 0px;
-  top: 969px;
+  top: 1039px;
 }
 .screen .projects-screen .projects-card__inner-wrapper--img img:nth-child(2) {
   position: absolute;
   z-index: 2;
   top: 30px;
   left: 215px;
-  top: 1026px;
+  top: 1096px;
   width: 630px;
   height: 470px;
 }
@@ -238,7 +256,7 @@
 .screen .projects-screen .projects-card__inner-wrapper--img2 img:nth-child(1) {
   position: absolute;
   z-index: 1;
-  width: 845px;
+  width: 585px;
   height: 470px;
   left: 1015px;
   top: 1710px;
@@ -284,9 +302,9 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  width: 1300px;
 }
 .screen .news-screen .news-container__card {
-  width: 370px;
   height: 514px;
   background-color: #ffffff;
   margin: 60px 30px;
@@ -315,7 +333,7 @@
   flex-direction: row;
   margin-top: 10px;
 }
-.screen .news-screen .news-container__card--meta img {
+.screen .news-screen .news-container__card--meta .meta-img img {
   border-radius: 50%;
   padding: 0 15px;
 }
@@ -337,6 +355,10 @@
   line-height: 17px;
   color: #55b7ff;
   text-align: left;
+}
+.screen .news-screen .news-container--img img {
+  border-radius: 50%;
+  padding: 0 15px;
 }
 .screen .gallery-screen {
   display: flex;
@@ -420,14 +442,18 @@
   height: 450px;
   background-image: url("/img/form_mask1.png");
   justify-content: center;
-  align-items: center;
   margin: auto;
   box-shadow: 0px 0px 10px 0px #a8a6a6;
   background-repeat: no-repeat;
   background-size: contain;
   background-position: bottom;
+  background-color: white;
+  position: relative;
+  z-index: 2;
+  top: -310px;
 }
 .screen .form-screen .form__line {
+  text-align: center;
   margin-bottom: 30px;
 }
 .screen .form-screen .form__title {
@@ -442,25 +468,136 @@
 .screen .form-screen .form__container {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+}
+.screen .form-screen .form__container--address {
+  line-height: 50px;
 }
 .screen .form-screen .form__container--address .fa {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 15px;
   line-height: 28px;
   color: #7e5aff;
   letter-spacing: 5px;
   border-spacing: 10px;
 }
-.screen .form-screen input[type=text] {
-  display: block;
-  border: none;
-  border-bottom: 1px solid #2C4058;
-  margin: 8px 0;
+.screen .form-screen .form__container--labels {
+  width: 310px;
+  min-height: 180px;
+  display: flex;
+  flex-direction: column;
+  float: left;
+  position: relative;
 }
-.screen .form-screen input[type=email] {
+.screen .form-screen .form__container .form-btn {
+  color: black;
+  width: 140px;
+  height: 50px;
+  background-color: #fafafa;
+  font-family: "Montserrat", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 17px;
+  cursor: pointer;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+.screen .form-screen .form__container .text-block__btn:hover {
+  background-color: #c0c0c0;
+}
+.screen .form-screen .form__container input[type=text] {
   border: none;
-  border-bottom: 1px solid #2C4058;
+  border-bottom: 1px solid #2c4058;
+  margin: 8px 0;
+  line-height: 50px;
+}
+.screen .form-screen .form__container input[type=email] {
+  border: none;
+  border-bottom: 1px solid #2c4058;
+  line-height: 50px;
+}
+.screen .form-screen .form__container input:focus {
+  background-color: #e3defc;
+}
+.screen .footer-screen {
+  display: flex;
+  flex-direction: column;
+  height: 549px;
+  background-image: url("/img/footer_background.png"), linear-gradient(251.06deg, #7e5aff -2.19%, #55b7ff 103.21%);
+  background-size: cover;
+  align-items: center;
+  justify-content: space-around;
+}
+.screen .footer-screen .footer {
+  width: 800px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  position: relative;
+  top: -250px;
+}
+.screen .footer-screen .footer--social {
+  display: flex;
+  flex-direction: row;
+  width: 160px;
+}
+.screen .map-screen {
+  display: flex;
+  flex-direction: column;
+}
+.screen .social-icon {
+  padding: 0 8px;
+}
+.screen #map {
+  height: 700px;
+  width: 100%;
+}
+
+.slider {
+  width: 560px;
+  margin: 0 auto;
+}
+
+.slick-slide {
+  margin: 0px 20px;
+}
+
+.slick-slide .news-container__card--img img {
+  margin: auto;
+  width: 374px;
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: #fdfdfd;
+}
+
+.slick-slide {
+  transition: all ease-in-out 0.3s;
+  opacity: 1;
+}
+
+.slick-active {
+  opacity: 1;
+}
+
+.slick-current {
+  opacity: 1;
+}
+
+.slick-dots li button {
+  color: white;
+}
+
+.slick-prev:before {
+  content: url("/img/left.png");
+}
+
+.slick-next:before {
+  content: url("/img/right.png");
 }
 
 /*# sourceMappingURL=styles.css.map */
