--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1,9 +1,16 @@
 * {
   box-sizing: border-box;
   margin: 0;
-  //   font-family: "Montserrat", sans-serif;
   font-family: "Source Sans Pro", sans-serif;
   color: #2c4058;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  width: 1600px;
 }
 
 .screen {
@@ -11,17 +18,13 @@
   flex-direction: column;
 
   .landing-screen {
-    // width: 100%;
-    height: 100vh;
-    background-image: url(" /img/screen1_mask_group.png"),
-      url("/img/screen1_background.png");
-    // background: linear-gradient(243.43deg, #7e5aff 16.9%, #55b7ff 83.27%); //just to have it here
-    background-repeat: no-repeat;
-    background-size: auto;
     display: flex;
     flex-direction: column;
+    height: 800px; //cf mockup
+    background-image: url(" /img/screen1_mask_group.png"),
+      linear-gradient(243.43deg, #7e5aff 16.9%, #55b7ff 83.27%);
+    background-size: cover;
     align-items: center;
-    // padding: 54px 0 50px;
     justify-content: space-around;
 
     .header-container {
@@ -109,10 +112,34 @@
 
   .landing-screen__card {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 917px;
+    text-align: center;
+    width: 1000px;
     height: 420px;
+
+    &--down-arrow {
+      display: flex;
+      flex-direction: row;
+      align-content: stretch;
+      align-items: flex-end;
+      justify-content: space-around;
+      position: relative;
+      right: 506px; //hack. not so elegant, i know
+    }
+
+    &--down-arrow:hover {
+      bottom: -10px;
+    }
+
+    &--wrapper {
+      //   display: flex;
+      //   flex-direction: column;
+      //   align-items: center;
+      //   width: 1000px;
+      //   height: 300px;
+      //   margin: 30px;
+      //   min-height: 0;
+      //   min-width: 0;
+    }
 
     &--title {
       font-family: "Montserrat", sans-serif;
@@ -201,7 +228,7 @@
             width: 585px;
             height: 470px;
             left: 0px;
-            top: 969px;
+            top: 1039px;
             // background: #55b7ff;
           }
 
@@ -210,7 +237,7 @@
             z-index: 2;
             top: 30px;
             left: 215px;
-            top: 1026px;
+            top: 1096px;
             width: 630px;
             height: 470px;
           }
@@ -281,7 +308,7 @@
           img:nth-child(1) {
             position: absolute;
             z-index: 1;
-            width: 845px;
+            width: 585px;
             height: 470px;
             left: 1015px;
             top: 1710px;
@@ -341,9 +368,9 @@
       display: flex;
       flex-direction: row;
       justify-content: center;
+      width: 1300px;
 
       &__card {
-        width: 370px;
         height: 514px;
         background-color: #ffffff; //just to test
         margin: 60px 30px;
@@ -374,9 +401,11 @@
           flex-direction: row;
           margin-top: 10px;
 
-          img {
-            border-radius: 50%;
-            padding: 0 15px;
+          .meta-img {
+            img {
+              border-radius: 50%;
+              padding: 0 15px;
+            }
           }
 
           .meta-info {
@@ -400,6 +429,13 @@
               text-align: left;
             }
           }
+        }
+      }
+
+      &--img {
+        img {
+          border-radius: 50%;
+          padding: 0 15px;
         }
       }
     }
@@ -499,18 +535,19 @@
     height: 450px;
     background-image: url("/img/form_mask1.png");
     justify-content: center;
-    align-items: center;
     margin: auto;
     box-shadow: 0px 0px 10px 0px #a8a6a6;
     background-repeat: no-repeat;
     background-size: contain;
     background-position: bottom;
-    
-    // background-color: #c9b9b9;
+    background-color: white;
 
+    position: relative;
+    z-index: 2;
+    top: -310px;
 
     .form__line {
-      //   text-align: center;
+      text-align: center;
       margin-bottom: 30px;
     }
 
@@ -526,37 +563,155 @@
     }
 
     .form__container {
-        display: flex;
-        flex-direction: row;
-        // margin: 54px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
 
       &--address {
+        line-height: 50px;
+
         .fa {
           font-style: normal;
           font-weight: normal;
-          font-size: 18px;
+          font-size: 15px;
           line-height: 28px;
           color: #7e5aff;
           letter-spacing: 5px;
           border-spacing: 10px;
-        //   margin-right: 54px;
-
         }
       }
-    }
 
-    input[type="text"] {
-        display: block;
-        border: none;
-        border-bottom: 1px solid #2C4058 ;
-    //   width: 50%;
-    //   padding: 12px 20px;
-      margin: 8px 0;
-    }
+      &--labels {
+        width: 310px;
+        min-height: 180px;
+        display: flex;
+        flex-direction: column;
+        float: left;
+        position: relative;
+      }
 
-    input[type="email"] {
+      .form-btn {
+        color: black;
+        width: 140px;
+        height: 50px;
+        background-color: #fafafa;
+        // margin: 41px 0;
+        font-family: "Montserrat", sans-serif;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 14px;
+        line-height: 17px;
+        cursor: pointer;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+      }
+
+      .text-block__btn:hover {
+        background-color: #c0c0c0;
+      }
+
+      input[type="text"] {
         border: none;
-        border-bottom: 1px solid #2C4058 ;
+        border-bottom: 1px solid #2c4058;
+        margin: 8px 0;
+        line-height: 50px;
+      }
+
+      input[type="email"] {
+        border: none;
+        border-bottom: 1px solid #2c4058;
+        line-height: 50px;
+      }
+
+      input:focus {
+        background-color: rgb(227, 222, 252);
+      }
     }
   }
+
+  .footer-screen {
+    display: flex;
+    flex-direction: column;
+    height: 549px;
+    background-image: url("/img/footer_background.png"),
+      linear-gradient(251.06deg, #7e5aff -2.19%, #55b7ff 103.21%);
+    background-size: cover;
+    align-items: center;
+    justify-content: space-around;
+
+    .footer {
+      width: 800px;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      position: relative;
+      top: -250px;
+
+      &--social {
+        display: flex;
+        flex-direction: row;
+        width: 160px;
+      }
+    }
+  }
+
+  .map-screen {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .social-icon {
+    padding: 0 8px;
+  }
+
+  #map {
+    height: 700px;
+    width: 100%;
+  }
+}
+
+//General stuff mostly for slick overriding
+
+.slider {
+  width: 560px;
+  margin: 0 auto;
+}
+.slick-slide {
+  margin: 0px 20px;
+}
+
+.slick-slide .news-container__card--img img {
+  margin: auto;
+  width: 374px;
+  //small hack because of this unsolved issue https://github.com/kenwheeler/slick/issues/2167
+}
+
+.slick-prev:before,
+.slick-next:before {
+  color: rgb(253, 253, 253);
+}
+
+.slick-slide {
+  transition: all ease-in-out 0.3s;
+  opacity: 1;
+}
+
+.slick-active {
+  opacity: 1;
+}
+
+.slick-current {
+  opacity: 1;
+}
+
+.slick-dots li button {
+  color: white;
+}
+
+.slick-prev:before {
+  content: url("/img/left.png");
+}
+.slick-next:before {
+  content: url("/img/right.png");
 }
