fixed the smooth slider to be js based

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,7 +6,7 @@
 }
 
 html {
-  scroll-behavior: smooth;
+//   scroll-behavior: smooth; //in case there is no necesarry in JS, this works too
 }
 
 body {
