--- a/css/styles.scss
+++ b/css/styles.scss
@@ -21,7 +21,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 800px; //cf mockup
-    background-image: url(" /img/screen1_mask_group.png"),
+    background-image: url("../img/screen1_mask_group.png"),
       linear-gradient(243.43deg, #7e5aff 16.9%, #55b7ff 83.27%);
     background-size: cover;
     align-items: center;
@@ -338,7 +338,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 1035px; //just in the beginning
-    background-image: url("/img/news_mask.png"),
+    background-image: url("../img/news_mask.png"),
       linear-gradient(237.1deg, #24ccfa 11.16%, #3c7fd4 89.18%);
     background-size: cover;
     color: white;
@@ -533,7 +533,7 @@ body {
     flex-direction: column;
     width: 770px;
     height: 450px;
-    background-image: url("/img/form_mask1.png");
+    background-image: url("../img/form_mask1.png");
     justify-content: center;
     margin: auto;
     box-shadow: 0px 0px 10px 0px #a8a6a6;
@@ -634,7 +634,7 @@ body {
     display: flex;
     flex-direction: column;
     height: 549px;
-    background-image: url("/img/footer_background.png"),
+    background-image: url("../img/footer_background.png"),
       linear-gradient(251.06deg, #7e5aff -2.19%, #55b7ff 103.21%);
     background-size: cover;
     align-items: center;
@@ -710,8 +710,8 @@ body {
 }
 
 .slick-prev:before {
-  content: url("/img/left.png");
+  content: url("../img/left.png");
 }
 .slick-next:before {
-  content: url("/img/right.png");
+  content: url("../img/right.png");
 }
